virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: "/scan"
    corsPolicy:
      allowOrigin:
      - "*"   # comme on utilise pas de serveur web pour servir la page web index.html, on met autorise cors à toute provenance
      allowMethods:
      - GET
      - POST
      allowHeaders:
      - "*"
      maxAge: "24h"
    route:
    - destination:
        host: scanner-service
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/history"
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - GET
      allowHeaders:
      - "*"
      maxAge: "24h"
    route:
    - destination:
        host: history-service
        port:
          number: 4000
